--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           onsuccess();
         }
       }
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/TestAR.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/TestAR_2.json", {onProgress: UnityProgress});
     </script>
   </head>
   <body>
