--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WEBAR_Car.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WEBAR_Car.data.gz",
-        frameworkUrl: buildUrl + "/WEBAR_Car.framework.js.gz",
-        codeUrl: buildUrl + "/WEBAR_Car.wasm.gz",
+        dataUrl: buildUrl + "/WEBAR_Car.data",
+        frameworkUrl: buildUrl + "/WEBAR_Car.framework.js",
+        codeUrl: buildUrl + "/WEBAR_Car.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "AR-API",
